<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_bottom_navigation"
    app:startDestination="@+id/menuHome">
    <fragment
        android:id="@+id/menuHome"
        android:name="com.aroundstudy.ui.fragment.main.HomeFragment"
        android:label="@string/main_menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/menuStudy"
        android:name="com.aroundstudy.ui.fragment.main.StudyFragment"
        android:label="@string/main_menu_study"
        tools:layout="@layout/fragment_study" />
    <fragment
        android:id="@+id/menuChat"
        android:name="com.aroundstudy.ui.fragment.main.ChatFragment"
        android:label="@string/main_menu_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/menuMore"
        android:name="com.aroundstudy.ui.fragment.main.MoreFragment"
        android:label="@string/main_menu_more"
        tools:layout="@layout/fragment_more" />
</navigation>