<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/com_gender"
        android:textColor="@color/color_444444"
        android:textSize="16dp" />

    <RadioGroup
        android:id="@+id/rdgGender"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdoMan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/sel_rdo_gender"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/com_gender_man"
            android:textColor="@color/sel_color_rdo_txt" />

        <RadioButton
            android:id="@+id/rdoWomen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_rdo_gender"
            android:button="@null"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/com_gender_women"
            android:textColor="@color/sel_color_rdo_txt" />
    </RadioGroup>
</LinearLayout>