<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="58dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_login_logo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnKakao"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/sel_btn_kakao_login"
            android:fontFamily="@font/pretendard_medium"
            android:stateListAnimator="@null"
            android:text="@string/login_kakao"
            android:textColor="@color/color_282828"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNaver"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sel_btn_naver_login"
            android:fontFamily="@font/pretendard_medium"
            android:stateListAnimator="@null"
            android:text="@string/login_naver"
            android:textColor="@color/color_fffff"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApple"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sel_btn_apple_login"
            android:fontFamily="@font/pretendard_medium"
            android:stateListAnimator="@null"
            android:text="@string/login_apple"
            android:textColor="@color/color_fffff"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/sel_btn_google_login"
            android:fontFamily="@font/pretendard_medium"
            android:stateListAnimator="@null"
            android:text="@string/login_google"
            android:textColor="@color/color_282828"
            android:textSize="16dp" />
    </LinearLayout>
</ScrollView>