<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="170dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnOk"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/complete_join"
            android:textColor="@color/color_282828"
            android:textSize="23dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/pretendard_regular"
            android:gravity="center"
            android:text="@string/complete_join_des"
            android:textColor="@color/color_5e5e5e"
            android:textSize="16dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="20dp"
        android:background="@drawable/sel_btn_fill_default"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/btn_ok"
        android:textColor="@color/sel_color_btn_fill_txt"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>