<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAroundSearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/sel_btn_drop_down"
                android:drawableEnd="@drawable/sel_arrow_down"
                android:drawablePadding="2dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center_vertical"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/com_around_search"
                android:textColor="@color/color_444444"
                android:textSize="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnProcess"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:background="@drawable/sel_btn_drop_down"
                android:drawableEnd="@drawable/sel_arrow_down"
                android:drawablePadding="2dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center_vertical"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/com_process_all"
                android:textColor="@color/color_444444"
                android:textSize="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:background="@drawable/sel_btn_drop_down"
                android:drawableEnd="@drawable/sel_arrow_down"
                android:drawablePadding="2dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center_vertical"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/com_sort_recent"
                android:textColor="@color/color_444444"
                android:textSize="12dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/studyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:overScrollMode="never"
            android:paddingHorizontal="13dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>